update on directory

--- a/.github/workflows/autograding.yml
+++ b/.github/workflows/autograding.yml
@@ -15,7 +15,5 @@ jobs:
       run: pip install GitPython pytest chardet
 
     - name: Run Pytest Autograder
-      run: pytest tests/test_autograder.py --tb=short --maxfail=1 | tee pytest-results.txt
+      run: python tests/autograder.py
 
-    - name: Output Test Results
-      run: cat pytest-results.txt
