--- a/.github/workflows/autograding.yml
+++ b/.github/workflows/autograding.yml
@@ -25,7 +25,5 @@ jobs:
       run: pip install GitPython pytest chardet
 
     - name: Run Pytest Autograder
-      run: python tests/autograder.py
+      run: pytest 
 
-    - name: Output Test Results
-      run: cat pytest-results.txt
