--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - name: Checkout Student Submission
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Install Dependencies Manually
       run: |
